tests/baselines/reference/typeOfThisInStaticMembers2.errors.txt
==== tests/cases/compiler/typeOfThisInStaticMembers2.ts (2 errors) ====
    class C {
        static foo = this; // error
                     ~~~~
!!! error TS2140: 'this' cannot be referenced in static initializers in a class body.
    }
    
    class C2<T> {
        static foo = this; // error
                     ~~~~
!!! error TS2140: 'this' cannot be referenced in static initializers in a class body.
    }